--- a/html-css-js-basico/html/src/css/style.css
+++ b/html-css-js-basico/html/src/css/style.css
@@ -10,10 +10,10 @@
 
 :root {
     --cor-1:#0D0D0D;
-    --cor-2:#34253A;
-    --cor-3:#950010;
+    --cor-2:#292927;
+    --cor-3:#f00000;
     --cor-4:#030200;
-    --cor-5:#6A2673;
+    --cor-5:#1B208C;
     --white:#fff;
     --black:#000;
 }
@@ -76,7 +76,7 @@ code{
   }
   .faq-item:hover{
     text-decoration: underline;
-    color: #6A2673;
+    color: var(--cor-5);
   }
   
   .answer {
@@ -101,5 +101,8 @@ code{
     font-weight:700;
  }
  .answer h3 {
-  color: #6A2673;
+  color:var(--cor-5);
+ }
+ code {
+  font-weight: 700;
  }
