--- a/html-css-js-basico/html/src/css/style.css
+++ b/html-css-js-basico/html/src/css/style.css
@@ -14,6 +14,7 @@
     --cor-3:#f00000;
     --cor-4:#030200;
     --cor-5:#1B208C;
+    --cor-6:#ECDBC1;
     --white:#fff;
     --black:#000;
 }
@@ -35,6 +36,7 @@ header{
 
 body{
     background-color: var(--cor-4);
+   
 }
 
 .title{
@@ -59,10 +61,10 @@ code{
     flex-direction: column;
     margin: 20px auto;
     padding: 20px;
-    color: var(--white);
     border: 1px solid var(--white);
     border-radius: 12px;
     box-shadow: 0.1px 0.2px 12px #fff;
+    background-color: var(--cor-6);
    
 }
 h2 {
@@ -106,7 +108,7 @@ p {
     font-size: 1.5em;
     font-weight:700;
     text-align: center;
-    color:var(--cor-5);
+    
  }
 
  code {
@@ -116,3 +118,4 @@ p {
   text-indent: 20px;
   font-size: 0.8em;
  }
+ 
